# xaviernx

./: CMakeLists.txt  README.md  camera_rtp_file.sh  camera_to_rtp.sh  my-recognition.cpp  pc_view_rtp.bat  play_10b_h265.sh  sw_play_h265.sh  sw_rtp_file.sh
detectnet_toy/: CMakeLists.txt  detectnet.cpp
